@@ -9,6 +9,7 @@ o-----------------------------------------------------------------------------o
   - Add functions to control force of the spring system
   - CalHardwareModel : a object to store and to compute information
     needed to do hardware vertex skinning
+  - Add a time factor to allow reverse time of sync animation.
 
 o-----------------------------------------------------------------------------o
 | Version 0.9.1 ( 29. November 2003) 
